feat: filter's report, make & edit reports

--- a/app/globals.css
+++ b/app/globals.css
@@ -129,3 +129,7 @@
 .bg-white-transparent {
   background-color: var(--background-white-transparent);
 }
+
+.leaflet-container {
+  cursor: crosshair;
+}
